# distributor-dataset-generator

./: .gitignore  .pre-commit-config.yaml  README.md  count_records.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
data/items/: items_with_dimensions.csv
data_generator/: __init__.py  config.py  constants.py  generate_all.py  generate_preview.py
data_generator/modules/: __init__.py  ar_ledger.py  backorders.py  costs.py  customer_item_preferences.py  customers.py  dc_item_slotting.py  distribution_centers.py  geonames.py  inventory.py  inventory_adjustments.py  inventory_monthly_snapshot.py  invoices.py  item_costs.py  item_forecast.py  items.py  labor_costs.py  order_lines.py  orders.py  price_history.py  promotions.py  purchase_orders.py  returns.py  sales_reps.py  shipment_lines.py  shipments.py  tracking.py  vendor_item_details.py  vendor_performance.py  vendors.py
sql/: db_load.sql  schema.sql
tests/: test_smoke.py  test_tracking_event_ids.py
